# financial-reconciliation-system

./: .flake8  .gitignore  ADVANCED_EXPENSE_ANALYSIS.md  AI_HANDOVER_CONTEXT.md  CHANGELOG.md  CLEANUP_MANIFEST.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.txt  COMMIT_PLANNING.md  CONTRIBUTING.md  CRITICAL_ARCHITECTURE_ISSUES.md  CRITICAL_DOUBLE_COUNTING_BUG.md  CRITICAL_RENT_RULES.md  CURRENT_STATUS_AND_ISSUES.md  DEVELOPMENT_STATUS.md  EXPERT_CODEBASE_ANALYSIS_PROMPT.md  FINAL_RECONCILIATION_REPORT.md  GOLD_STANDARD_FINAL_REPORT.md  GOLD_STANDARD_WORKFLOW_COMPLETE.md  GUI_IMPROVEMENTS.md  ISSUES_RESOLVED.md  LICENSE  NORMALIZATION_COMPLETE_SUMMARY.md  OPTIMIZATION_ROADMAP.md  PHASE1_COMPLETE_SUMMARY.md  PHASE2_DATA_LOADER_SUMMARY.md  PHASE3_COMMIT_MESSAGE.txt  PHASE4_COMPLETION_REPORT.md  PHASE5A_COMPLETE_ANALYSIS_REPORT_20250723_041053.md  PHASE5A_PROJECT_STATUS_REPORT.md  PHASE5_RECONCILIATION_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TECHNICAL_ANALYSIS_FRAMEWORK.md  accounting_engine.py  ai_commit_notes.txt  ai_documentation_update_notes.txt  analyze_discrepancy.py  analyze_errors.py  (+64 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  quick-check.yml  release.yml
archive/deprecated/: launch_dashboard.py  launch_gui.py  launch_modern_gui.py  modern_aesthetic_gui.py
backups/: clean_null_bytes_20250718_212904.py  demo_20250718_212904.py  normalize_expense_history_v2_20250718_212904.py  normalize_expense_history_v3_20250718_212904.py  normalize_rent_allocation_20250718_212904.py  reconciliation_analysis_20250718_212904.py  test_basic_20250718_212904.py
backups/backups/: main_20250718_212904_20250718_212913.py  normalize_expense_history_20250718_212904_20250718_212913.py  normalize_rent_allocation_v2_20250718_212904_20250718_212913.py  normalize_zelle_payments_20250718_212904_20250718_212913.py  normalize_zelle_payments_v2_20250718_212904_20250718_212913.py  phase1_demo_20250718_212904_20250718_212913.py  test_loaders_20250718_212904_20250718_212913.py  test_processing_logic_20250718_212904_20250718_212913.py
config/: config.yaml
data/processed/: expense_history_audit_v3.json  expense_history_normalized.csv  expense_history_normalized_v2.csv  expense_history_normalized_v3.csv  manual_review_items_v3.json  rent_allocation_normalized.csv  rent_allocation_normalized_v2.csv  zelle_payments_normalized.csv  zelle_payments_normalized_v2.csv
data/raw/: Consolidated_Expense_History_20250622.csv  Consolidated_Rent_Allocation_20250527.csv  Zelle_From_Jordyn_Final.csv
docs/: ACCURACY.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_LOG.md  CLEANUP_REPORT.md  CURRENT_STATE.md  DEPLOYMENT.md  DEPRECATIONS.md  GUI_AUDIT_REPORT.md  GUI_DOCUMENTATION.md  INDEX.md  RENT_LOGIC_RESOLVED.md  TESTING_STATUS.md  assumptions.md
docs/api/: API_REFERENCE.md
docs/architecture/: GOLD_STANDARD_STRUCTURE.md  PIPELINE.md
docs/business/: CRITICAL_RENT_RULES.md  assumptions.md
docs/technical/: AI_HANDOVER_CONTEXT.md  CURRENT_STATUS_AND_ISSUES.md  MANUAL_REVIEW_ISSUE.md  SYSTEM_STATUS.md
docs/user-guide/: CONFIGURATION.md  DEPLOYMENT.md  GETTING_STARTED.md  LOCAL_ASSETS.md  TROUBLESHOOTING.md
new_raw/: BALANCE_JG_Chase_6173_Ledger_20231215-20250313.csv  BALANCE_JG_Discover_1544_Transactions_20241020-20250320.csv  BALANCE_JG_WellsFargo_4296_Transactions_20240417-20251231.csv  BALANCE_RZ_MonarchMoney_Ledger_20220918-20250718.csv  BALANCE_RZ_RocketMoney_Ledger_20220915-20250720.csv  Jordyn - Chase Bank - Total Checking x6173 - All.csv  Jordyn - Discover - Discover It Card x1544 - CSV.csv  Jordyn - Wells Fargo - Active Cash Visa Signature Card x4296 - CSV.csv
output/: .gitkeep  VERBOSE_AUDIT_TRAIL.csv  VERBOSE_AUDIT_TRAIL_GUIDE.md  manual_review.csv  phase5a_combined_data.csv  processing_errors.json  reconciliation_ledger.csv  summary.json
output/audit_trails/: expense_history_normalization_audit.json  (+12 more)
scripts/: run_with_review.py  view_all_transactions.py
src/: README.md
templates/: index.html
tests/: test_expense_processor.py
tools/: setup.py
(+109 files in other folders)
